Fix: `DetailsWidget` align domain description right

--- a/src/modules/dashboard/components/ActionsPage/DetailsWidget/DetailsWidget.css
+++ b/src/modules/dashboard/components/ActionsPage/DetailsWidget/DetailsWidget.css
@@ -46,4 +46,5 @@
 .domainDescription {
   composes: multiLineEllipsis from '~styles/text.css';
   width: 190px;
+  text-align: right;
 }
